--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Evgeniy Yanushko",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
